src/tests/propInInitialState/valid/case#10/index.jsx
import React, { useMemo } from 'react';

function MeuComponente() {
    const estado = useMemo(() => 'Inicial', []);

    return (
        <div>
            <p>Estado: {estado}</p>
        </div>
    );
}
