src/tests/propInInitialState/invalid/case#5/index.jsx
function setContainer(props){
    const [sets, setSets] = useState(props.sets);

    return <View>...</View>
}